<resources>
    <string name="app_name">RSShcool2021-Android-task-4-DB</string>

    <string name="base_name">Pets</string>

    <string name="caption_name">Name:</string>
    <string name="caption_age">Age:</string>
    <string name="caption_breed">Type:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_item_fragment">Add new pet</string>
    <string name="item_list_fragment">Item list</string>
    <string name="add_button_text">Add</string>

    <!-- Preference Titles -->
    <string name="preference_dao">Way to access the database</string>
    <string name="preference_sort">Sort</string>

    <!-- Messages Preferences -->
    <string name="sort_field_name">Sort by Name</string>
    <string name="dao_title">Used by DAO</string>

    <!-- Sync Preferences -->
    <string name="sort_field_age">Sort by Age</string>
    <string name="sort_field_breed">Sort by Type</string>
    <string name="sort_summary">Turn on for sort</string>
    <string name="sort_field">Sorting criterion</string>
    <string name="sort_title">Sort items on screen</string>
    <string name="preference_title">Preferences</string>
    <string name="key_dao_cursor">cursor</string>
    <string name="key_dao_room">room</string>
    <string name="dao_key">dao_key</string>
    <string name="sort_key">sort_key</string>
    <string name="sort_field_key">sort_field_key</string>
    <string name="edit_item_fragment">Edit pet information</string>
    <string name="apply_button_text">Аpply</string>
    <string name="delete_button_text">Delete</string>
    <string name="preferences_button_text">Preferences</string>
    <string name="order_button_text">Order</string>
    <string name="edit_button_text">Edit</string>
</resources>