<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/preference_dao"
        app:icon="@drawable/ic_baseline_swap_horiz_24">

        <ListPreference
            app:defaultValue="cursor"
            app:entries="@array/dao_entries"
            app:entryValues="@array/dao_values"
            app:iconSpaceReserved="false"
            app:key="dao_key"
            app:title="@string/dao_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/preference_sort"
        app:icon="@drawable/ic_baseline_sort_24">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="sort_key"
            app:summary="@string/sort_summary"
            app:title="@string/sort_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="name"
            app:dependency="sort_key"
            app:entries="@array/sort_entries"
            app:entryValues="@array/sort_values"
            app:iconSpaceReserved="false"
            app:key="sort_field_key"
            app:title="@string/sort_field"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>