<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="ui.ItemDetailsFragment">


    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/caption_name"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textPersonName"
        android:maxLength="30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/edit_text_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:focusable="true"
        android:hint="@string/caption_age"
        android:imeOptions="flagNoExtractUi"
        android:inputType="number"
        android:maxLength="3"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_breed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_name" />


    <EditText
        android:id="@+id/edit_text_breed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:focusable="true"
        android:hint="@string/caption_breed"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textPersonName"
        android:maxLength="30"
        app:layout_constraintBottom_toTopOf="@+id/apply_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_name" />


    <Button
        android:id="@+id/apply_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:enabled="false"
        android:text="@string/add_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_breed" />

</androidx.constraintlayout.widget.ConstraintLayout>