<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/stopwatch_unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:padding="4dp">

        <TextView
            android:id="@+id/name_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/caption_name"
            android:textAlignment="textEnd"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintEnd_toStartOf="@+id/barier"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/age_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_2"
            android:lines="1"
            android:text="@string/caption_age"
            android:textAlignment="textEnd"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintEnd_toStartOf="@+id/barier"
            app:layout_constraintTop_toBottomOf="@+id/name_caption" />

        <TextView
            android:id="@+id/breed_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_2"
            android:lines="1"
            android:text="@string/caption_breed"
            android:textAlignment="textEnd"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintEnd_toStartOf="@+id/barier"
            app:layout_constraintTop_toBottomOf="@+id/age_caption" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            app:barrierDirection="end"
            app:constraint_referenced_ids="name_caption,age_caption,breed_caption"
            tools:layout_editor_absoluteX="73dp"
            tools:layout_editor_absoluteY="8dp"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="1"
            android:layout_marginStart="@dimen/text_margin_4"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintBottom_toBottomOf="@+id/name_caption"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/barier"
            app:layout_constraintTop_toTopOf="@+id/name_caption"
            app:layout_constraintVertical_bias="0.461"
            tools:text="Some name" />

        <TextView
            android:id="@+id/age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="1"
            android:layout_marginStart="@dimen/text_margin_4"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintBottom_toBottomOf="@+id/age_caption"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/barier"
            app:layout_constraintTop_toTopOf="@+id/age_caption"
            app:layout_constraintVertical_bias="0.461"
            tools:text="Some age" />

        <TextView
            android:id="@+id/breed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="1"
            android:layout_marginStart="@dimen/text_margin_4"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintBottom_toBottomOf="@+id/breed_caption"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/barier"
            app:layout_constraintTop_toTopOf="@+id/breed_caption"
            app:layout_constraintVertical_bias="0.461"
            tools:text="Some breed" />

        <androidx.constraintlayout.widget.Barrier
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="start"
            android:layout_marginStart="4dp"
            app:constraint_referenced_ids="name_caption,age_caption,breed_caption" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>